--- a/delivery.html
+++ b/delivery.html
@@ -73,7 +73,7 @@
 	</div></div>
 		<p>Contact us:<a href="tel:9731969975">1234567890</a></p></div
 	<center>
-		<form>
+		<form action="mailto:meghanasrinivas1712@gmail.com" class="" method="post">
 			<div>Name<input type="type" name="" placeholder="enter your name" required="please fill this first"></div>
 			<div>Email<input type="email" name="" placeholder="enter ur email adress first" required="please fill out this to proceed"></div>
 			<div>Contact<input type="number" name="" placeholder="enter ur number" required="please fill out this"></div>
