--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		}
 		figure{
 			display: inline-block;
-			margin: 20px;
+			margin-left: auto;
+			margin-right: auto;
 		}
 		figure img{
 			vertical-align: top;
