--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,8 @@
 			border: 1px dotted gray;
 			margin: 20px;
 		}figure{
-			border: 10px solid black;
+			margin-left:auto;
+			margin-right: auto;
 		}
 		figure img{
 			vertical-align: top;
