--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			float: left;
 			width: 25%;
 			padding: 5px;
+                        text-align: center;
 		}
 		.last::after {
 			content: "";
