--- a/specials.html
+++ b/specials.html
@@ -6,8 +6,8 @@
 		figure{
 			display: inline-block;
 			border: 1px dotted gray;
-			margin: 20px;
-			border: 10px solid black;
+			margin-left: auto;
+			margin-right: auto;
 		}
 		figure img{
 			vertical-align: top;
